@@ -1,4 +1,5 @@
 session_name: vcspull
+before_script: ./bootstrap_env.py
 start_directory: ./ # load session relative to config location (project root).
 windows:
 - window_name: vcspull
@@ -7,39 +8,20 @@ windows:
   options:
     main-pane-height: 35
   shell_command_before:
-    - command -v virtualenv >/dev/null 2>&1 || { pip install virtualenv; }
-    - '[ -d .env -a -f .env/bin/activate ] && source .env/bin/activate || virtualenv .env'
-    - '[ ! -d .env/build ] || rm -rf .env/build'
+    - '[ -d .env -a -f .env/bin/activate ] && source .env/bin/activate'
   panes:
-  - shell_command: 
-    - reset
-    - vim
-    - :Ex
-    focus: true
+  - focus: true
   - pane
-  - shell_command: 
-    - command -v .env/bin/vcspull >/dev/null 2>&1 || { pip install -e .; }
-    - command -v watching_testrunner >/dev/null 2>&1 || { pip install watching_testrunner; }
-    - watching_testrunner --basepath ./ --pattern="*.py" 'python run-tests.py'
+  - watching_testrunner --basepath ./ --pattern="*.py" 'python run-tests.py'
 - window_name: docs
   layout: main-horizontal
   options:
     main-pane-height: 35
+  start_directory: doc/
   shell_command_before: 
-    - command -v virtualenv >/dev/null 2>&1 || { pip install virtualenv; }
-    - '[ -d .env -a -f .env/bin/activate ] && source .env/bin/activate || virtualenv .env'
-    - '[ ! -d .env/build ] || rm -rf .env/build'
-    - command -v .env/bin/vcspull >/dev/null 2>&1 || { pip install -e .; }
-    - cd ./doc
+    - '[ -d ../.env -a -f ../.env/bin/activate ] && source ../.env/bin/activate'
   panes:
-  - shell_command:
-    - reset
-    - vim
-    - :Ex
-  - pwd
+  - focus: true
+  - pane
   - echo 'docs built to <http://0.0.0.0:8002/_build/html>'; python -m SimpleHTTPServer 8002
-  - shell_command:
-    - command -v sphinx-quickstart >/dev/null 2>&1 || { pip install -r requirements.pip; }
-    - command -v watching_testrunner >/dev/null 2>&1 || { pip install watching_testrunner; }
-    - watching_testrunner --basepath ./ --pattern="*.rst" 'make html'
-    - python -m SimpleHTTPServer
+  -  watching_testrunner --basepath ./ --pattern="*.rst" 'make html'
